--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -6,7 +6,7 @@
       <th><button style="font-size:15px" (click)="onClick()"> <i class="fa fa-plus"></i></button>
       </th>
      
-      <th style="padding-left: 20px;" >BasicInfo</th>
+      <th style="padding-left: 20px;">BasicInfo</th>
       <th></th>
       <th >Company</th>
       <tr *ngFor="let item of dbList" >
@@ -43,7 +43,7 @@
         <h6 class="card-subtitle mb-2" style="color:black; font-weight:bold">Mike Huston</h6>
       </div>
         <table style="width: 120%;">
-          <tr><td>FullName:</td><td>Mike Huston</td></tr>
+          <tr><td>FullName:</td><td>Mike Hustonn</td></tr>
           <tr><td>Email:</td><td>mikehuston@live.com</td></tr>
           <tr><td>Phone:</td><td>+(069)238-4587</td></tr>
           <tr><td>Company:</td><td>No Information Provided</td></tr>
